# DAlvarez101.HermesStocks.io

./: .gitignore  2026-06-14-polymarket-weather-automation-research.md  2026-06-15-dfw-temperature-advection-model-instructions.md  2026-06-16-dfw-temperature-advection-model-results.md  README.md  ai-powered-portfolios.html  delegate-task-demo.html  hermes-native-ai-portfolio-methodology.html  index.html  portfolio-risk-analyzer.html  pyproject.toml
dfw-data-viewer/: index.html
dfw-live-dashboard/: index.html
dfw_temp_model/: __init__.py  config.py
docs/: live_data.md
klax-data-viewer/: index.html
klax-live-dashboard/: index.html
mia-data-viewer/: index.html
mia-live-dashboard/: index.html  ladder-signals-guide.html
scripts/: auto_commit.sh  auto_push.sh  cron_hrrr_ingest.sh  cron_nws_5min.sh  cron_polymarket_bot.sh  cron_update_dashboard.sh  fetch_live_metars.py  generate_dashboard.py  generate_db_viewer.py  ingest_and_update_dashboard.py  ingest_live_metars.py  ingest_nws_observations.py  run_first_experiment.py  run_parameter_sweep.py  run_polymarket_bot.py
tests/: test_advection.py  test_aviationweather.py  test_baseline.py  test_blending_bias.py  test_blending_blend.py  test_blending_providers.py  test_build_dataset.py  test_config.py  test_dependencies.py  test_first_experiment_avwx.py  test_fronts.py  test_generate_dashboard.py  test_geometry.py  test_hrrr.py  test_iem_asos.py  test_ingest_and_update_dashboard.py  test_ingest_script.py  test_live_script.py  test_metrics.py  test_nbm.py  test_nws_api.py  test_obs_db.py  test_openmeteo.py  (+11 more)
(+53 files in other folders)
