[project]
name = "dfw-temp-model"
version = "0.1.0"
description = "DFW-area temperature advection model for prediction market research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "pyproj>=3.6",
    "scikit-learn>=1.3",
    "optuna>=3.6",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
    "slow: tests that take a long time to run",
]
